--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>client</title>
   </head>
   <body class="app-theme">
-    <div id="root"></div>
+    <div id="root" style="display: flex; justify-content: center;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
